# unicom-python

./: Cargo.toml  install.sh
script/: unicom-python
src/: main.rs
src/app/: config.rs  mod.rs  script.rs  server.rs
src/python/: config.rs  executor.rs  mod.rs  server.rs
