[package]
name = "unicom-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.pyo3]
version = "0.16.0"
features = ["auto-initialize"]

[dependencies]
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = {version = "0.7.1", features=["compat"]}
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
lazy_static = "1.4.0"
toml = "0.5.9"
pythonize = "0.16.0"
pyo3-asyncio = { version = "0.16.0", features = ["attributes", "tokio-runtime"] }
walkdir = "2.3.2"

unicom-lib = { git = "https://github.com/jiefxxx/unicom-lib" }